[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/enemy_ship.png" type="Texture" id=1]
[ext_resource path="res://src/Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.6393
height = 55.4517

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.4606
height = 54.5407

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BulletCollision" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollision"]
rotation = 1.57079
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="area_entered" from="BulletCollision" to="." method="_on_BulletCollision_area_entered"]
[connection signal="body_entered" from="BulletCollision" to="." method="_on_BulletCollision_body_entered"]
